--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
-opencv-python==3.4.2.17
-dlib==19.15.0
-scikit-learn==0.19.2
-scikit-image==0.14.0
+aniso8601==4.1.0
+Click==7.0
+cloudpickle==0.7.0
+cycler==0.10.0
+dask==1.1.1
+decorator==4.3.2
+Flask==1.0.2
+Flask-RESTful==0.3.7
+itsdangerous==1.1.0
+Jinja2==2.10
+kiwisolver==1.0.1
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+networkx==2.2
 numpy==1.15.0
+opencv-python==3.4.2.17
+Pillow==5.4.1
+pkg-resources==0.0.0
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+PyWavelets==1.0.1
+scikit-image==0.14.2
+scikit-learn==0.20.2
+scipy==1.2.0
+six==1.12.0
+sklearn==0.0
+toolz==0.9.0
+Werkzeug==0.14.1
