--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 aniso8601==4.1.0
+astroid==2.1.0
 Click==7.0
 cloudpickle==0.7.0
 cycler==0.10.0
 dask==1.1.1
 decorator==4.3.2
+dlib==19.16.0
+face-recognition==1.2.3
+face-recognition-models==0.3.0
 Flask==1.0.2
 Flask-RESTful==0.3.7
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
 kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 matplotlib==3.0.2
+mccabe==0.6.1
 networkx==2.2
 numpy==1.15.0
 opencv-python==3.4.2.17
 Pillow==5.4.1
 pkg-resources==0.0.0
+pylint==2.2.2
 pyparsing==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
@@ -26,4 +34,6 @@ scipy==1.2.0
 six==1.12.0
 sklearn==0.0
 toolz==0.9.0
+typed-ast==1.3.0
 Werkzeug==0.14.1
+wrapt==1.11.1
